feat: analysis REST API (#40)
