# apps/backend/src/assets/swagger.yaml
@@ -271,6 +271,83 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
+  /statistics/:sensorId:
+    get:
+      description: Statistics route, used for drawing charts and graphs. Use this route to get statistic for a SPECIFIC sensor
+      tags: [Statistics]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                startDate:
+                  type: string
+                  format: date-time
+                endDate:
+                  type: string
+                  format: date-time
+
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  temperatureHistory:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        temperature:
+                          type: number
+                          example: 29
+                        day:
+                          type: string
+                          format: date-time
+                  humidityHistory:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        humidity:
+                          type: number
+                          example: 30
+                        day:
+                          type: string
+                          format: date-time
+                  lightIntensityHistory:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        lightIntensity:
+                          type: number
+                          example: 80
+                        day:
+                          type: string
+                          format: date-time
+                  earthMoistureHistory:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        earthMoisture:
+                          type: number
+                          example: 60
+                        day:
+                          type: string
+                          format: date-time
+
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
 components:
   securitySchemes:
     ApiKeyAuth:
